# FolderTree

./: .gitignore  API_EXAMPLES.md  AddToGit.ps1  COMPLETE_GUIDE.md  DATABASE_SETUP_COMPLETE.md  DESKTOP_TAURI.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_CHECKLIST.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  RUNNING.md  VISUAL_SUMMARY.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml  release-tauri.yml
backend/: .env.example  Dockerfile  aiGenerate.js  classifier.js  createFoldersFromTree.js  fsOps.js  jest.config.js  package.json  server.js  setup-db.sh
backend/migrations/: 001_initial.sql
backend/src/: index.ts
backend/src/__tests__/: classifierService.test.ts  fileSystemService.test.ts  setup.ts
backend/src/config/: database.ts  env.ts  logger.ts  swagger.ts
backend/src/middleware/: auth.ts  index.ts
backend/src/routes/: api.ts  auth.ts  classify.ts  cleanup.ts  createFolders.ts  organize.ts  projects.ts  templates.ts
backend/src/services/: aiGeneratorService.ts  authService.ts  classifierService.ts  cleanupService.ts  collaborationService.ts  fileSystemService.ts  organizerService.ts  projectService.ts  templateService.ts  userService.ts
backend/src/types/: index.ts
backend/src/utils/: errors.ts  pathSecurity.ts  validators.ts
frontend/: ARCHITECTURE.md  Dockerfile  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src-tauri/: Cargo.toml  latest.json  tauri.conf.json
frontend/src/api/: client.ts  ops.ts
(+6 files in other folders)
